--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
         </div>
 
-        <span class="span">kebikacurry@gmail.com</span>
+        <span class="span">kebikacurryto@gmail.com</span>
       </a>
 
     </div>
@@ -538,7 +538,7 @@
             515 Bloor St W, Toronto, ON M5S 1Y4, Canada 
           </address>
 
-          <a href="mailto:kebikacurry@gmail.com" class="body-4 contact-link">kebikacurry@gmail.com</a>
+          <a href="mailto:kebikacurry@gmail.com" class="body-4 contact-link">kebikacurryto@gmail.com</a>
 
           <a href="tel: (647) 977-5535" class="body-4 contact-link">Booking Request : (647) 977-5535 </a>
 
