Added link for booking system

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
           <ion-icon name="chevron-forward"></ion-icon>
         </button>
 
-        <a href="#" class="hero-btn has-after">
+        <a href="https://kebika-bookingsystem-m02og30ph-carltons-projects-dee9d5ef.vercel.app/" class="hero-btn has-after" target="_blank">
           <img src="./images/hero-icon.png" width="48" height="48" alt="booking icon">
 
           <span class="label-2 text-center span">Book A Table</span>
