--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2025 Kebika Japanese Curry. All Rights Reserved | Crafted by <a href="www.linkedin.com/in/carlton-g"
+          &copy; 2025 Kebika Japanese Curry. All Rights Reserved | Crafted by <a href="https://www.linkedin.com/in/carlton-g/"
           target="_blank" class="link">Carlton Gnanamalai
 </a>
         </p>
